25-1captstone/kubernetes/networkpolicy/block-internet.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-internet
  namespace: default
spec:
  podSelector:
    matchLabels:
      role: security
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.0.0.0/8
        - ipBlock:
            cidr: 172.16.0.0/12
        - ipBlock:
            cidr: 192.168.0.0/16
